fix tooltip not showing up

--- a/packages/augur-simplified/src/modules/markets/markets-view.styles.less
+++ b/packages/augur-simplified/src/modules/markets/markets-view.styles.less
@@ -45,12 +45,9 @@
 .MarketCard {
   &:hover {
     .HoverDropShadow;
+    
+    transition: box-shadow 0.3s ease-out;
   }
-
-  // > a {
-  //   text-decoration: none;
-  //   color: unset;
-  // }
 
   > div,
   > section > div {
